Menu: prevent covering tweet button.

--- a/app/css/menu.sass
+++ b/app/css/menu.sass
@@ -49,6 +49,11 @@ $size: 40px
     .content
       +transform(translate(-80px, 0))
 
+  // Prevent covering the tweet button
+  @media (max-width: 1099px)
+    &:not(.show-links)
+      display: none
+
   .navigation-bar
     margin-top: 0
 
